WIP: Added basic sources and javadoc jars